<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:minHeight="300dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/iris_leaf_length"/>

        <EditText
            android:id="@+id/fragment_dialog_leaf_length_value"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_margin="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/iris_leaf_width"/>

        <EditText
            android:id="@+id/fragment_dialog_leaf_width_value"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_margin="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/iris_petal_length"/>

        <EditText
            android:id="@+id/fragment_dialog_petal_length_value"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_margin="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/iris_petal_width"/>

        <EditText
            android:id="@+id/fragment_dialog_petal_width_value"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_margin="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/fragment_dialog_last_value_text"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/fragment_dialog_amount"/>

        <EditText
            android:id="@+id/fragment_dialog_number_of_elements_value"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_margin="16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/fragment_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Find Min"/>

</LinearLayout>